Fix a number of bugs related to text overflowing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,7 @@ body, html {
 }
 .flex-scroll-container {
     flex: 1 1 auto;
+    overflow-x: hidden;
     overflow-y: auto;
     height: 0px;
     overscroll-behavior: contain;
